[package]
name = "solisp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solisp"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
phf = { version = "0.10.0", features = ["macros"] }
rust_lisp = { version = "0.2.0", git = "https://github.com/atellix/rust_lisp.git", branch = "atellix" }
